--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>Obsidian リンク中継ページ</title>
+  <title>EchoStar 詠光 KRS-01</title>
   <script>
     function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
@@ -12,7 +12,7 @@
     window.onload = () => {
       const file = getQueryParam('file');
       if (!file) {
-        document.body.innerHTML = '<p>パラメータ「file」が指定されていません。</p>';
+        document.body.innerHTML = '<p>KOTONOHA Relay Satellite - EchoStar 詠光 KRS-01</p>';
         return;
       }
 
