--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         return;
       }
 
-      const vaultName = 'MyVault'; // ← Vault名をここに（正確に）
+      const vaultName = 'Documents'; // ← Vault名をここに（正確に）
       const encodedFile = encodeURIComponent(`DialogueSeeds/${file}.md`);
       const obsidianUrl = `obsidian://adv-uri?vault=${encodeURIComponent(vaultName)}&filepath=${encodedFile}`;
 
